# alimer

./: .appveyor.yml  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_vs2017_x64.bat
Alimer/: Alimer.h  AlimerConfig.h.in  CMakeLists.txt
Alimer/Base/: Allocator.h  AutoPtr.h  Hash.h  Iterator.h  Ptr.h  Swap.h  WString.h
Alimer/Graphics/: ConstantBuffer.h  GPUObject.h  GraphicsDefs.h  IndexBuffer.h  ShaderVariation.h  Texture.h  VertexBuffer.h
Alimer/IO/: Console.h  ObjectRef.h
Alimer/Math/: IntVector2.h  Math.h  Vector2.h
Alimer/Thread/: Condition.h  Mutex.h  Thread.h  ThreadLocalValue.h  Timer.h
Alimer/Window/Win32/: Win32GLContext.cpp  Win32GLContext.h
CMake/Modules/: AlimerCommon.cmake  AlimerMacros.cmake  AlimerOptions.cmake  AlimerPackaging.cmake  GetAlimerRevision.cmake
Samples/: CMakeLists.txt
Samples/01_Base/: CMakeLists.txt  Main.cpp
Samples/02_IO/: CMakeLists.txt  Main.cpp
Samples/03_Scene/: CMakeLists.txt  Main.cpp
Samples/04_Resource/: CMakeLists.txt  Main.cpp
Samples/05_Window/: CMakeLists.txt  Main.cpp
Samples/06_Graphics/: CMakeLists.txt  Main.cpp
Samples/07_Renderer/: CMakeLists.txt  Main.cpp
Source/: CMakeLists.txt
Source/Alimer/: Alimer.h  AlimerConfig.h.in  CMakeLists.txt  PlatformDef.h  PlatformIncl.h
Source/Alimer/Application/: Application.cpp  Application.h  Engine.cpp  Engine.h  Time.cpp  Time.h
Source/Alimer/Application/SDL2/: SDLApplication.cpp
Source/Alimer/Application/Windows/: Win32Application.cpp
Source/Alimer/Base/: Allocator.cpp  Allocator.h  AutoPtr.h  Hash.cpp  Hash.h  HashMap.h  HashSet.h  Iterator.h  List.cpp  List.h  Pair.h  Ptr.cpp  Ptr.h  Sort.h  StdHeaders.h  String.cpp  String.h  StringHash.cpp  StringHash.h  Swap.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  WString.cpp  WString.h
Source/Alimer/Debug/: Log.cpp  Log.h  Profiler.cpp  Profiler.h
Source/Alimer/Graphics/: Buffer.cpp  Buffer.h  ConstantBuffer.cpp  ConstantBuffer.h  GPUObject.cpp  GPUObject.h  Graphics.cpp  Graphics.h  GraphicsDefs.cpp  GraphicsDefs.h  GraphicsImpl.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  ShaderVariation.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
Source/Alimer/Graphics/D3D11/: D3D11Buffer.cpp  D3D11Buffer.h  D3D11ConstantBuffer.cpp  D3D11ConstantBuffer.h  D3D11Convert.cpp  D3D11Convert.h  D3D11Graphics.cpp  D3D11Graphics.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11Prerequisites.h  D3D11ShaderVariation.cpp  D3D11ShaderVariation.h  D3D11Texture.cpp  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h
Source/Alimer/Graphics/Vulkan/: VulkanGraphics.cpp  VulkanGraphics.h  VulkanPrerequisites.h
Source/Alimer/IO/: Arguments.cpp  Arguments.h  Console.cpp  Console.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  JSONValue.cpp  JSONValue.h  MemoryBuffer.cpp  MemoryBuffer.h  ObjectRef.h  ResourceRef.cpp  ResourceRef.h  Stream.cpp  Stream.h  VectorBuffer.cpp  VectorBuffer.h
Source/Alimer/IO/Windows/: WindowsFileSystem.cpp
Source/Alimer/Math/: AreaAllocator.cpp  AreaAllocator.h  BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  Frustum.cpp  Frustum.h  IntRect.cpp  IntRect.h  IntVector2.cpp  IntVector2.h  Math.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Polyhedron.cpp  Polyhedron.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Size.cpp  Size.h  Sphere.cpp  Sphere.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  (+1 more)
Source/Alimer/Object/: Attribute.cpp  Attribute.h  Event.cpp  Event.h  Object.cpp  Object.h  ObjectResolver.cpp  ObjectResolver.h  Serializable.cpp  Serializable.h
Source/Alimer/Platform/: Platform.cpp  Platform.h
Source/Alimer/Renderer/: Batch.cpp  Batch.h  Camera.cpp  Camera.h  GeometryNode.cpp  GeometryNode.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  Renderer.cpp  Renderer.h  StaticModel.cpp  StaticModel.h
Source/Alimer/Resource/: Decompress.cpp  Decompress.h  Image.cpp  Image.h  JSONFile.cpp  JSONFile.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h
Source/Alimer/Scene/: Node.cpp  Node.h  Scene.cpp  Scene.h  SpatialNode.cpp  SpatialNode.h
Source/Alimer/Thread/: Condition.cpp  Condition.h  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  ThreadLocalValue.cpp  ThreadLocalValue.h  Timer.cpp  Timer.h
Source/Alimer/Window/: Input.cpp  Input.h  Window.cpp  Window.h
Source/Alimer/Window/SDL2/: SDLWindow.cpp
Source/Alimer/Window/Win32/: Win32GLContext.cpp  Win32GLContext.h  Win32Window.cpp  Win32Window.h
Source/Managed/: CMakeLists.txt  Directory.Build.props
Source/Managed/AlimerSharp/: AlimerApi.Library.cs  AlimerApi.cs  AlimerSharp.csproj  Application.cs  NativeLibrary.cs
Source/Managed/AlimerSharp/Runtime/: MonoPInvokeCallbackAttribute.cs  PreserveAttribute.cs  Runtime.cs
Source/Managed/Editor/: CMakeLists.txt
Source/Managed/Editor/Alimer.Studio/: Alimer.Studio.csproj
Source/Managed/Tools/: CMakeLists.txt
Source/Managed/Tools/Alimer.Assets/: Alimer.Assets.csproj
Source/Managed/Tools/Alimer.Studio/: Alimer.Studio.csproj  Program.cs  StudioApplication.cs
Source/Managed/libAlimerSharp/: Application.cpp  Application.h  CMakeLists.txt  RefCounted.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/AssetCompiler/: CMakeLists.txt  main.cpp
Source/Tools/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
Source/Tools/Tools/: CMakeLists.txt
Source/Tools/Tools/Assets/: AssetImporter.cpp  AssetImporter.hpp
Source/Tools/Tools/Assets/Importers/: ShaderImporter.cpp  ShaderImporter.hpp
assets/shaders/tests/: 06_Graphics.hlsl
