## Add samples
file (GLOB_RECURSE DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} CMakeLists.txt)
list (SORT DIRS)
foreach (DIR ${DIRS})
    get_filename_component (DIR ${DIR} PATH)
    if (DIR AND NOT TARGET ${DIR})
        add_subdirectory (${DIR})
        set_property(TARGET ${DIR} PROPERTY FOLDER "Samples")
    endif ()
endforeach ()